--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <body>
         <header>
             <nav class="topnav">
-            <a class="active" href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Gallery</a>
-            <a href="#">Contact</a>
+            <a class="active" href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="contact.html">Contact</a>
             </nav>
         </header>
 
         <section class="section section-light">
             <span class="border trans" style="font-size: 40px;">
                 <centre>
-                    <h1>Welcome to this website</h1>
+                    <h1 style="font-family: fantasy; font-family: cursive;"><mark>WELCOME TO CODERS WORLD APP</mark></h1>
                 </centre>
             </span>
         </section>
