--- a/contact.html
+++ b/contact.html
@@ -30,5 +30,7 @@
         <p>Manager: <mark>+254 132 486 700</mark></p>
         <p>Help: <mark>+254 132 486 719</mark></p>
         <p>Order: <mark>+254 132 486 729</mark></p>
+
+        <footer><marquee>FOR MORE INFORMATION, VISIT <a href="https://www.codingal.com/student/dashboard/">www.codingal.com</a></marquee></footer>
     </body>
 </html>
